--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next",
     "gcp-build": "next build",
+    "wpe-build": "next build",
     "start": "next start -p 8080"
   },
   "keywords": [],
