--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "@apollo/react-ssr": "^3.1.3",
-    "@types/node": "^13.1.5",
-    "@types/react": "^16.9.17",
-    "apollo-boost": "^0.4.7",
-    "graphql": "^14.5.8",
-    "next": "^9.5.3",
-    "next-apollo": "^3.1.10",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "typescript": "^3.7.4"
+    "@apollo/react-hooks": "^4.0.0",
+    "@apollo/react-ssr": "^4.0.0",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^15.3.0",
+    "next": "^9.5.5",
+    "next-apollo": "^5.0.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.8",
+    "@types/react": "^16.9.52",
+    "typescript": "^4.0.3"
   }
 }
